# Cognit

./: .env.example  .gitignore  README.md  pyproject.toml
.cognit/: cognit.db
.github/workflows/: ci.yml
.tmp-tests/case-007cc14156214808ae6b1446fe6a967d/: cognit.db
.tmp-tests/case-01b5083c90a24b23a70fa79781f7aa12/: cognit.db
.tmp-tests/case-02df00d7a1044704af264edb4957afd4/: cognit.db
.tmp-tests/case-06d88de214534d13a2c36c9151e4663d/: cognit.db
.tmp-tests/case-08860a27b93c4e03b4180b495581ea39/: cognit.db
.tmp-tests/case-093f8cd0e11a4c1ebdb56fb5ed97de60/: cognit.db
.tmp-tests/case-09fb1d1b47754fc3bb23566284f753c8/: cognit.db
.tmp-tests/case-0b5bfa616e0647c6a72ff248de8187ae/: cognit.db
.tmp-tests/case-0b667191d5104d1ab4103287f4afb271/: cognit.db
.tmp-tests/case-0dd4d2e401af41b9abd6f0aae8d9d653/: cognit.db
cognit/: __init__.py  cli.py  config.py  constants.py  exceptions.py  handler.py  service_verification.py
docs/: architecture.md  configuration.md  local_development.md  redaction.md  roadmap.md  technical_debt.md  telegram_setup.md
pytest_tmp/: test_config_loads_from_dotenv_current  test_dotenv_is_not_loaded_at_icurrent  test_test_telegram_uses_dotenvcurrent
tests/: conftest.py  test_ai_fallback.py  test_cli.py  test_config.py  test_dedupe.py  test_embeddings.py  test_examples.py  test_gemini_analyzer.py  test_handler.py  test_rate_limiter.py  test_redactor.py  test_service_verification.py  test_sqlite_store.py  test_telegram_bot.py  test_telegram_client.py  test_telegram_formatter.py  test_threaded_storage.py  test_traceback_parser.py
(+209 files in other folders)
